--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack",
-    "server": "webpack-dev-server --open",
+    "dev": "webpack-dev-server --open",
     "build": "NODE_ENV=production webpack --config ./webpack.production.config.js --progress"
   },
   "repository": {
